--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,17 @@
 <!-- Coding style based on http://gist.github.com/mbostock/5977197 -->
 
 <style>
+h1{
+  font-size: 240%;
+  text-align: center;
+}
 body {
   font: 11px sans-serif;
+  background-color: beige;
+}
+button{
+  background-color:black;
+  color: white;
 }
 
 .axis path,
@@ -23,13 +32,25 @@ body {
 }
 
 .tooltip {
+  background-color: grey;
   position: absolute;
-  width: 200px;
+  color: black;
+  width: 100px;
   height: 28px;
   pointer-events: none;
 }
 </style>
 <body>
+<h1> CS498 Final Project </h1>
+<div>
+<button onclick="location.href='index1.html'">1</button>
+<button>2</button>
+<button>3</button>
+<button>4</button>
+</div>
+<div>
+<p> Click on the countries in the legend to highlight one! </p>
+</div>
 <script src="https://d3js.org/d3.v3.min.js"></script>
 
 <script>
@@ -45,19 +66,19 @@ var margin = {top: 20, right: 20, bottom: 30, left: 40},
  */ 
 
 // setup x 
-var xValue = function(d) { return d.Calories;}, // data -> value
+var xValue = function(d) { return d.EDU;}, // data -> value
     xScale = d3.scale.linear().range([0, width]), // value -> display
     xMap = function(d) { return xScale(xValue(d));}, // data -> display
     xAxis = d3.svg.axis().scale(xScale).orient("bottom");
 
 // setup y
-var yValue = function(d) { return d["Protein (g)"];}, // data -> value
+var yValue = function(d) { return d.ELE;}, // data -> value
     yScale = d3.scale.linear().range([height, 0]), // value -> display
     yMap = function(d) { return yScale(yValue(d));}, // data -> display
     yAxis = d3.svg.axis().scale(yScale).orient("left");
 
 // setup fill color
-var cValue = function(d) { return d.Manufacturer;},
+var cValue = function(d) { return d["Country Name"];},
     color = d3.scale.category10();
 
 // add the graph canvas to the body of the webpage
@@ -73,12 +94,12 @@ var tooltip = d3.select("body").append("div")
     .style("opacity", 0);
 
 // load data
-d3.csv("./data.csv", function(error, data) {
+d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", function(error, data) {
 
   // change string (from CSV) into number format
   data.forEach(function(d) {
-    d.Calories = +d.Calories;
-    d["Protein (g)"] = +d["Protein (g)"];
+    d.EDU = +d.EDU;
+    d.ELE = +d.ELE;
 //    console.log(d);
   });
 
@@ -115,16 +136,16 @@ d3.csv("./data.csv", function(error, data) {
       .data(data)
     .enter().append("circle")
       .attr("class", "dot")
-      .attr("r", 3.5)
+      .attr("r", 4.0)
       .attr("cx", xMap)
       .attr("cy", yMap)
       .style("fill", function(d) { return color(cValue(d));}) 
       .on("mouseover", function(d) {
           tooltip.transition()
                .duration(200)
-               .style("opacity", .9);
-          tooltip.html(d["Cereal Name"] + "<br/> (" + xValue(d) 
-          + ", " + yValue(d) + ")")
+               .style("opacity", .7);
+          tooltip.html(d["Country Name"] + "<br/> (" + Math.floor(xValue(d)) 
+          + ", " + Math.floor(yValue(d)) + ")")
                .style("left", (d3.event.pageX + 5) + "px")
                .style("top", (d3.event.pageY - 28) + "px");
       })
@@ -144,6 +165,7 @@ d3.csv("./data.csv", function(error, data) {
   // draw legend colored rectangles
   legend.append("rect")
       .attr("x", width - 18)
+      .attr("y", 40)
       .attr("width", 18)
       .attr("height", 18)
       .style("fill", color);
@@ -151,7 +173,7 @@ d3.csv("./data.csv", function(error, data) {
   // draw legend text
   legend.append("text")
       .attr("x", width - 24)
-      .attr("y", 9)
+      .attr("y", 50)
       .attr("dy", ".35em")
       .style("text-anchor", "end")
       .text(function(d) { return d;})
