--- a/index1.html
+++ b/index1.html
@@ -57,7 +57,7 @@ button{
 <script>
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
     width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    height = 520 - margin.top - margin.bottom;
 
 /* 
  * value accessor - returns the value to encode for a given data object.
@@ -67,7 +67,7 @@ var margin = {top: 20, right: 20, bottom: 30, left: 40},
  */ 
 
 // setup x 
-var xValue = function(d) { return d.EDU;}, // data -> value
+var xValue = function(d) { return d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AEDU.GN.ZS)"];}, // data -> value
     xScale = d3.scale.linear().range([0, width]), // value -> display
     xMap = function(d) { return xScale(xValue(d));}, // data -> display
     xAxis = d3.svg.axis().scale(xScale).orient("bottom");
@@ -106,12 +106,13 @@ d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", 
     d.EDU = +d.EDU;
     d.ELE = +d.ELE;
     d.HDI = +d.HDI;
+    d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AEDU.GN.ZS)"] = +d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AEDU.GN.ZS)"];
 //    console.log(d);
   });
 
   // don't want dots overlapping axis, so add in buffer to data domain
-  xScale.domain([d3.min(data, xValue)-1, d3.max(data, xValue)+1]);
-  yScale.domain([d3.min(data, yValue)-1, d3.max(data, yValue)+1]);
+  xScale.domain([1.5,5.2]);
+  yScale.domain([10, d3.max(data, yValue)+1]);
 
   // x-axis
   svg.append("g")
@@ -123,7 +124,7 @@ d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", 
       .attr("x", width)
       .attr("y", -6)
       .style("text-anchor", "end")
-      .text("Calories");
+      .text("Education Expenditure");
 
   // y-axis
   svg.append("g")
@@ -135,24 +136,32 @@ d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", 
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Protein (g)");
+      .text("Access to Electricity");
 
   // draw dots
 
-  svg.selectAll(".dot")
+  var my_dots = svg.selectAll(".dot")
       .data(data)
     .enter().append("circle")
+    .attr("class", "dot")
+      .attr("r", 4.0)
+      .attr("cx", xMap)
+      .attr("cy", yMap)
+      .style("fill", function(d) { return color(cValue(d));});
+
+    my_dots.transition().duration(2000).delay(500)
       .attr("class", "dot")
       .attr("r", function(d) { return hScale(hValue(d));})
       .attr("cx", xMap)
       .attr("cy", yMap)
-      .style("fill", function(d) { return color(cValue(d));}) 
-      .on("mouseover", function(d) {
+      .style("fill", function(d) { return color(cValue(d));});
+
+      my_dots.on("mouseover", function(d) {
           tooltip.transition()
                .duration(200)
                .style("opacity", .9);
-          tooltip.html(d["Country Name"] + "<br/> (" + Math.floor(xValue(d)) 
-          + ", " + Math.floor(yValue(d)) + ")")
+          tooltip.html(d["Country Name"] + "<br/> (" + xValue(d).toFixed(2)
+          + "% , " + Math.floor(yValue(d)) + ")")
                .style("left", (d3.event.pageX + 5) + "px")
                .style("top", (d3.event.pageY - 28) + "px");
       })
