--- a/main.html
+++ b/main.html
@@ -49,8 +49,8 @@
             height = bar_height * 50;
     var rightOffset = width + labelArea;
 
-    var lCol = "EDU";
-    var rCol = "ELE";
+    var lCol = "ELE2";
+    var rCol = "EDU";
     var xFrom = d3.scale.linear()
             .range([0, width]);
     var xTo = d3.scale.linear()
