--- a/index2.html
+++ b/index2.html
@@ -7,56 +7,82 @@
 <!-- Coding style based on http://gist.github.com/mbostock/5977197 -->
 
 <style>
-h1{
-  font-size: 240%;
-  text-align: center;
-}
-body {
-  font: 11px sans-serif;
-  background-color: beige;
-}
-button{
-  background-color:black;
-  color: white;
-}
+  h1{
+    padding-top: 0%;
+    margin-top: 0%;
+    padding-bottom: 0%;
+    margin-bottom: 0%;
+    font-size: 400%;
+    text-align: center;
+  }
+  body {
+    font: 11px sans-serif;
+    background-color: beige;
+  }
+  button{
+    background-color:black;
+    color: white;
+  }
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
+  .axis path,
+  .axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+  }
 
-.dot {
-  stroke: #000;
-}
+  .dot {
+    stroke: #000;
+  }
+  .curr{
+    background-color:blue;
 
-.tooltip {
-  background-color: grey;
-  position: absolute;
-  color: black;
-  width: 100px;
-  height: 28px;
-  pointer-events: none;
-}
+  }
+  .Allbuttons{
+    margin-top: 0%;
+    padding-top: 0%;
+    margin-left:45%;
+  }
+  .tooltip {
+    background-color: grey;
+    position: absolute;
+    color: black;
+    width: 100px;
+    height: 28px;
+    pointer-events: none;
+  }
+  .info{
+    background-color: black;
+    opacity: 0.5;
+    position: absolute;
+    left:78vw;
+    color:white;
+    height: 80vh;
+    width: 20vw;
+
+  }
 </style>
 <body>
-<h1> CS498 Final Project </h1>
-<div>
-<button onclick="location.href='index1.html'">1</button>
-<button>2</button>
-<button>3</button>
-<button>4</button>
-</div>
-<div>
-<p> Click on the countries in the legend to highlight one! </p>
-</div>
-<script src="https://d3js.org/d3.v3.min.js"></script>
+  <h1> CS498 Final Project </h1>
+  <div>
+    <div class="Allbuttons">
+      <button onclick="location.href='intro.html'" >1</button>
+      <button onclick="location.href='main.html'">2</button>
+            <button onclick="location.href='hdi_bar.html'">3</button>
+      <button class = "curr" onclick="location.href='index2.html'">4</button>
 
-<script>
-var margin = {top: 20, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 520 - margin.top - margin.bottom;
+      <button onclick="location.href='index1.html'">5</button>
+    </div>
+    <div class= "info">
+
+    </div>
+
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+
+    <script>
+      var margin = {top: 20, right: 20, bottom: 30, left: 40},
+      width = 960 - margin.left - margin.right,
+      height = 520 - margin.top - margin.bottom;
 
 /* 
  * value accessor - returns the value to encode for a given data object.
@@ -79,19 +105,19 @@ var yValue = function(d) { return d.ELE;}, // data -> value
 
 // setup fill color
 var cValue = function(d) { return d["Country Name"];},
-    color = d3.scale.category10();
+color = d3.scale.category10();
 
 // add the graph canvas to the body of the webpage
 var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+.attr("width", width + margin.left + margin.right)
+.attr("height", height + margin.top + margin.bottom)
+.append("g")
+.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 // add the tooltip area to the webpage
 var tooltip = d3.select("body").append("div")
-    .attr("class", "tooltip")
-    .style("opacity", 0);
+.attr("class", "tooltip")
+.style("opacity", 0);
 
 // load data
 d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", function(error, data) {
@@ -100,7 +126,7 @@ d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", 
   data.forEach(function(d) {
     d.EDU = +d.EDU;
     d.ELE = +d.ELE;
-d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AEDU.GN.ZS)"] = +d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AEDU.GN.ZS)"];
+    d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AEDU.GN.ZS)"] = +d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AEDU.GN.ZS)"];
 //    console.log(d);  
 });
 
@@ -110,74 +136,74 @@ d["2015 (YR2015) - Adjusted savings: education expenditure (% of GNI) (NY.ADJ.AE
 
   // x-axis
   svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-      .call(xAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("x", width)
-      .attr("y", -6)
-      .style("text-anchor", "end")
-      .text("Education Expenditure");
+  .attr("class", "x axis")
+  .attr("transform", "translate(0," + height + ")")
+  .call(xAxis)
+  .append("text")
+  .attr("class", "label")
+  .attr("x", width)
+  .attr("y", -6)
+  .style("text-anchor", "end")
+  .text("Education Expenditure");
 
   // y-axis
   svg.append("g")
-      .attr("class", "y axis")
-      .call(yAxis)
-    .append("text")
-      .attr("class", "label")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("Access to Electricity");
+  .attr("class", "y axis")
+  .call(yAxis)
+  .append("text")
+  .attr("class", "label")
+  .attr("transform", "rotate(-90)")
+  .attr("y", 6)
+  .attr("dy", ".71em")
+  .style("text-anchor", "end")
+  .text("Access to Electricity");
 
   // draw dots
   svg.selectAll(".dot")
-      .data(data)
-    .enter().append("circle")
-      .attr("class", "dot")
-      .attr("r", 4.0)
-      .attr("cx", xMap)
-      .attr("cy", yMap)
-      .style("fill", function(d) { return color(cValue(d));}) 
-      .on("mouseover", function(d) {
-          tooltip.transition()
-               .duration(200)
-               .style("opacity", .7);
-          tooltip.html(d["Country Name"] + "<br/> (" + Math.floor(xValue(d)).toFixed(2) 
-          + "% , " + Math.floor(yValue(d)) + ")")
-               .style("left", (d3.event.pageX + 5) + "px")
-               .style("top", (d3.event.pageY - 28) + "px");
-      })
-      .on("mouseout", function(d) {
-          tooltip.transition()
-               .duration(500)
-               .style("opacity", 0);
-      });
+  .data(data)
+  .enter().append("circle")
+  .attr("class", "dot")
+  .attr("r", 4.0)
+  .attr("cx", xMap)
+  .attr("cy", yMap)
+  .style("fill", function(d) { return color(cValue(d));}) 
+  .on("mouseover", function(d) {
+    tooltip.transition()
+    .duration(200)
+    .style("opacity", .7);
+    tooltip.html(d["Country Name"] + "<br/> (" + xValue(d).toFixed(2) 
+      + "% , " + Math.floor(yValue(d)) + ")")
+    .style("left", (d3.event.pageX + 5) + "px")
+    .style("top", (d3.event.pageY - 28) + "px");
+  })
+  .on("mouseout", function(d) {
+    tooltip.transition()
+    .duration(500)
+    .style("opacity", 0);
+  });
 
   // draw legend
   var legend = svg.selectAll(".legend")
-      .data(color.domain())
-    .enter().append("g")
-      .attr("class", "legend")
-      .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
+  .data(color.domain())
+  .enter().append("g")
+  .attr("class", "legend")
+  .attr("transform", function(d, i) { return "translate(0," + i * 20 + ")"; });
 
   // draw legend colored rectangles
   legend.append("rect")
-      .attr("x", width - 18)
-      .attr("y", 40)
-      .attr("width", 18)
-      .attr("height", 18)
-      .style("fill", color);
+  .attr("x", width - 18)
+  .attr("y", 40)
+  .attr("width", 18)
+  .attr("height", 18)
+  .style("fill", color);
 
   // draw legend text
   legend.append("text")
-      .attr("x", width - 24)
-      .attr("y", 50)
-      .attr("dy", ".35em")
-      .style("text-anchor", "end")
-      .text(function(d) { return d;})
+  .attr("x", width - 24)
+  .attr("y", 50)
+  .attr("dy", ".35em")
+  .style("text-anchor", "end")
+  .text(function(d) { return d;})
 });
 
 </script>
