--- a/hdi_bar.html
+++ b/hdi_bar.html
@@ -44,7 +44,7 @@ button{
 .Allbuttons{
     margin-top: 0%;
     padding-top: 0%;
-    margin-left:45%;
+    margin-left:40%;
 }
         .info{
   background-color: black;
@@ -54,7 +54,20 @@ button{
   color:white;
   height: 80vh;
   width: 20vw;
+    font-size: 14px;
+    padding-left: 1%;
 
+}
+  .tooltip {
+    background-color: grey;
+    position: absolute;
+    color: black;
+    width: 100px;
+    height: 28px;
+    pointer-events: none;
+  }
+.xtext{
+  padding-left:30%;
 }
 
 </style>
@@ -62,15 +75,17 @@ button{
 <h1> CS498 Final Project </h1>
 <div>
 <div class="Allbuttons">
-<button onclick="location.href='intro.html'" >1</button>
-<button onclick="location.href='main.html'">2</button>
-<button class = "curr" onclick="location.href='hdi_bar.html'">3</button>
-<button onclick="location.href='index2.html'">4</button>
+<button onclick="location.href='intro.html'" >About the Visualization</button>
+<button onclick="location.href='main.html'">1</button>
+<button class = "curr" onclick="location.href='hdi_bar.html'">2</button>
+<button onclick="location.href='index2.html'">3</button>
 
-<button onclick="location.href='index1.html'">5</button>
+<button onclick="location.href='index1.html'">4</button>
 </div>
 <div class= "info">
-
+This slide is a bar graph showing the Human Development Index of each of the countries.
+<br/>
+HOVER on the bars to know the exact values for HDI.
 </div>
 </div>
 <svg class="chart"></svg>
@@ -96,6 +111,9 @@ var yAxis = d3.svg.axis()
     .orient("left");
     var cValue = function(d) { return d["Country Name"];},
     color = d3.scale.category10();
+var tooltip = d3.select("body").append("div")
+.attr("class", "tooltip")
+.style("opacity", 0);
 
 var chart = d3.select(".chart")
     .attr("width", width + margin.left + margin.right)
@@ -114,7 +132,14 @@ d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", 
 
   chart.append("g")
       .attr("class", "y axis")
-      .call(yAxis);
+      .call(yAxis)
+      .append("text")
+      .attr("class", "label")
+      .attr("transform", "rotate(-90)")
+      .attr("y", 6)
+      .attr("dy", ".71em")
+      .style("text-anchor", "end")
+      .text("Human Development Index");
 
   chart.selectAll(".bar")
       .data(data)
@@ -124,7 +149,20 @@ d3.csv("https://raw.githubusercontent.com/kankani2/CS498Final/master/data.csv", 
       .attr("y", function(d) { return y(d["HDI"]); })
       .attr("height", function(d) { return height - y(d["HDI"]); })
       .attr("width", x.rangeBand())
-      .style("fill", function(d) { return color(cValue(d));});
+      .style("fill", function(d) { return color(cValue(d));})
+      .on("mouseover", function(d) {
+    tooltip.transition()
+    .duration(200)
+    .style("opacity", .7);
+    tooltip.html(d["Country Name"] + "<br/> (" + d["HDI"] + ")")
+    .style("left", (d3.event.pageX + 5) + "px")
+    .style("top", (d3.event.pageY - 28) + "px");
+  })
+  .on("mouseout", function(d) {
+    tooltip.transition()
+    .duration(500)
+    .style("opacity", 0);
+  });
 
 
 var legend = chart.selectAll(".legend")
@@ -159,4 +197,7 @@ function type(d) {
   
 
 </script>
+<div class = "xtext">
+Country Codes
+</div>
 </body>
