--- a/index2.html
+++ b/index2.html
@@ -41,7 +41,7 @@
   .Allbuttons{
     margin-top: 0%;
     padding-top: 0%;
-    margin-left:45%;
+    margin-left:40%;
   }
   .tooltip {
     background-color: grey;
@@ -59,23 +59,41 @@
     color:white;
     height: 80vh;
     width: 20vw;
+      font-size: 14px;
+      padding-left: 1%;
 
   }
+  .annotation1{
+  position:absolute;
+  left:200px;
+  top: 100px;
+  background-color: black;
+  color:white;
+width:100px;
+padding-left:1%;
+  font: 12px sans-serif;
+}
 </style>
 <body>
   <h1> CS498 Final Project </h1>
   <div>
     <div class="Allbuttons">
-      <button onclick="location.href='intro.html'" >1</button>
-      <button onclick="location.href='main.html'">2</button>
-            <button onclick="location.href='hdi_bar.html'">3</button>
-      <button class = "curr" onclick="location.href='index2.html'">4</button>
+      <button onclick="location.href='intro.html'" >About the Visualization</button>
+      <button onclick="location.href='main.html'">1</button>
+            <button onclick="location.href='hdi_bar.html'">2</button>
+      <button class = "curr" onclick="location.href='index2.html'">3</button>
 
-      <button onclick="location.href='index1.html'">5</button>
+      <button onclick="location.href='index1.html'">4</button>
     </div>
     <div class= "info">
-
+This slide has a scatter plot for the countries showing where they stand on the graph with the two factors (electricity and education) as the axes. In this graph, it is easy to visualize where each country is in respect to both the fields together compared to the other coutries. <br/>
+The axes have been adjusted to represent only the required range so that there is more space between the circles.
+<br/>
+HOVER on the circles to know the exact values.
     </div>
+    <div class = "annotation1">
+The circles are mostly in the center linear diagonal, except a few outliers.
+</div>
 
     <script src="https://d3js.org/d3.v3.min.js"></script>
 
