--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ button{
 
 <h1> CS498 Final Project </h1>
 <div class="Allbuttons">
-<button class = "curr" onclick="location.href='intro.html'" > About the Visualization</button>
+<button class = "curr" onclick="location.href='index.html'" > About the Visualization</button>
 <button onclick="location.href='main.html'">1</button>
 <button onclick="location.href='hdi_bar.html'">2</button>
 <button onclick="location.href='index2.html'">3</button>
