--- a/index1.html
+++ b/index1.html
@@ -86,7 +86,7 @@ padding-left:1%;
 <body>
 <h1> CS498 Final Project </h1>
 <div class="Allbuttons">
-<button onclick="location.href='intro.html'" >About the Visualization</button>
+<button onclick="location.href='index.html'" >About the Visualization</button>
 <button onclick="location.href='main.html'">1</button>
 <button onclick="location.href='hdi_bar.html'">2</button>
 
