--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@ padding-left:1%;
   <h1> CS498 Final Project </h1>
   <div>
     <div class="Allbuttons">
-      <button onclick="location.href='intro.html'" >About the Visualization</button>
+      <button onclick="location.href='index.html'" >About the Visualization</button>
       <button onclick="location.href='main.html'">1</button>
             <button onclick="location.href='hdi_bar.html'">2</button>
       <button class = "curr" onclick="location.href='index2.html'">3</button>
